2001-06-04  Brendan Kehoe  <brendan@zen.org>
            Phil Edwards  <pme@sources.redhat.com>

	* include/bits/std_bitset.h (bitset::test):  Fix __pos >= _Nb
	comparison; all positions must be < _Nb.
	* testsuite/23_containers/bitset_members.cc:  New file.

2001-06-04  Brendan Kehoe  <brendan@zen.org>

	PR libstdc++/3016
	* include/bits/stl_queue.h (classes queue, priority_queue):  Fix
	ctors to match the standard.

2001-06-04  Jeffrey Oldham  <oldham@codesourcery.com>

	* include/bits/char_traits.h (move): Reverse qualification of
	memmove with std::.
	(copy): Reverse qualification of memcpy with std::.

2001-06-04  Jeffrey Oldham  <oldham@codesourcery.com>

	* include/bits/char_traits.h (move): Qualify memmove with std::.
	(copy): Qualify memcpy with std::.
	* testsuite/27_io/filebuf_virtuals.cc (test01): Qualify strlen and
	strncmp with std::.
	(test02): Likewise.
	* testsuite/27_io/stringbuf_virtuals.cc (test01): Likewise.

2001-06-04  Hans-Peter Nilsson  <hp@axis.com>

	* libsupc++/Makefile.am (install-glibcppinstallHEADERS,
	uninstall-glibcppinstallHEADERS): Have explicit rules catering to
	SUN make VPATH peculiarities.
	* libsupc++/Makefile.in: Regenerate.

2001-06-01  Hans-Peter Nilsson  <hp@axis.com>

	* src/Makefile.am (VPATH): Delimit with ":", not space.
	* src/Makefile.in: Regenerate.

	* configure.in (use of GLIBCPP_CHECK_GNU_MAKE): Don't fail if GNU
	make isn't found.
	* configure: Regenerate.

2001-05-27  scott snyder  <snyder@fnal.gov>

	libstdc++/2976
	* include/bits/istream.tcc: Include std_ostream.h.

2001-05-31  Benjamin Kosnik  <bkoz@redhat.com>

	libstdc++/2997
	* src/bitset.cc: Qualify size_t with std::.

2001-05-30  Benjamin Kosnik  <bkoz@redhat.com>

	* acconfig.h (_GLIBCPP_BUGGY_FLOAT_COMPLEX): Remove.
	(_GLIBCPP_BUGGY_COMPLEX): Remove.
	* config.h.in: Regenerate.
	* acinclude.m4 (GLIBCPP_CHECK_COMPLEX_MATH_COMPILER_SUPPORT): Remove.
	* aclocal.m4: Regenerate.
	* configure.in: Don't call it.
	* configure: Regenerate.

	libstdc++/2970